@@ -69,21 +69,21 @@ struct ColorItem
 	// Usually we have only 1-2 coloring plugins.
 	// Keeping a copy of GUID in each of thousands of color items is a giant waste of memory,
 	// so GUID's are stored in separate set and here is only a pointer.
-	const void* Owner;
+	const GUID* Owner;
 	// Usually we have only 5-10 unique colors.
 	// Keeping a copy of FarColor in each of thousands of color items is a giant waste of memory,
 	// so FarColor's are stored in separate set and here is only a pointer.
-	const void* Color;
+	const FarColor* Color;
 	unsigned int Priority;
 	int StartPos;
 	int EndPos;
 	// it's an uint64 in plugin API, but only 0x1 and 0x2 are used now, so save some memory here.
 	unsigned int Flags;
 
-	const GUID& GetOwner() const;
+	const GUID& GetOwner() const { return *Owner; }
 	void SetOwner(const GUID& Value);
 
-	const FarColor& GetColor() const;
+	const FarColor& GetColor() const { return *Color; }
 	void SetColor(const FarColor& Value);
 
 	bool operator <(const ColorItem& rhs) const
