@@ -1,4 +1,8 @@
-﻿drkns 01.10.2014 20:07:16 +0200 - build 4127
+﻿drkns 08.10.2014 09:50:10 +0200 - build 4128
+
+1. #0002824: Assertion: list iterator not decrementable
+
+drkns 01.10.2014 20:07:16 +0200 - build 4127
 
 1. Еще пара исправлений в Message.
 
